--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "porto-project",
   "private": true,
   "version": "0.0.0",
+  "description": "Portofolio project using React.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "author": "seeyouridan",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
