--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "seeyouridan",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
